test_regress/t/t_interface_typedef2.out
%Error: t/t_interface_typedef2.v:37:11: Unsupported: SystemVerilog 2005 interface typedef
   37 |   typedef p1.stage_t stage1_t;   
      |           ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_interface_typedef2.v:40:11: Unsupported: SystemVerilog 2005 interface typedef
   40 |   typedef p2.stage_t stage2_t;   
      |           ^~
%Error: t/t_interface_typedef2.v:25:11: Unsupported: SystemVerilog 2005 interface typedef
   25 |   typedef p1.stage_t stage_t;   
      |           ^~
%Error: Exiting due to
